# code-grasp

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  Cargo.toml  LICENSE  Makefile  README.md
.cursor/: mcp.json
.zed/: settings.json
bench/: README.md
cg_cli/: Cargo.toml
cg_cli/src/: init.rs  main.rs
cg_cli/tests/: cli_help.rs  cli_init.rs  cli_models.rs  cli_verbose.rs
cg_mcp/: Cargo.toml
cg_mcp/src/: main.rs
cg_mcp/tests/: mcp_cli_flags.rs
crates/cg-core/: Cargo.toml  default-settings.toml
crates/cg-core/src/: error.rs  facade.rs  lib.rs  paths.rs  settings.rs
crates/cg-core/src/chunker/: ast.rs  lsp.rs  mod.rs
crates/cg-core/src/embedder/: fastembed.rs  mod.rs  openai.rs  prefetch.rs
crates/cg-core/src/index/: mod.rs  usearch.rs
crates/cg-core/src/manifest/: hasher.rs  mod.rs
crates/cg-core/src/store/: hybrid.rs  mod.rs
crates/cg-core/src/walker/: gitignore.rs  mod.rs
crates/cg-core/tests/: chunker_utf8_boundaries.rs  index_pipeline_perf.rs  store_roundtrip.rs  walker_cgignore.rs  walker_extensions.rs
crates/cg-proto/: Cargo.toml
crates/cg-proto/src/: lib.rs  types.rs
docs/: PERF_PLAN.md
scripts/: bench_search.py  install_linux.sh  install_mac.sh  install_windows.ps1
