[workspace]
members = ["crates/cg-core", "crates/cg-proto", "cg_cli", "cg_mcp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
# Same major as `fastembed` in `cg_core` (see its Cargo.toml); used to configure ORT before sessions load.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "native-tls"] }
usearch = "2.25"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
config = "0.14"
toml = "0.8"
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rmcp = { version = "1.5", features = ["server", "transport-io", "macros"] }
schemars = { version = "1", features = ["derive"] }
async-openai = "0.27"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
streaming-iterator = "0.1"
