[package]
name = "code-grasp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CodeGrasp CLI — local semantic codebase search"

[[bin]]
name = "cg"
path = "src/main.rs"

[features]
default = ["ort-bundled"]
lsp = ["cg_core/lsp"]
ort-bundled = ["cg_core/ort-bundled"]
ort-dynamic = ["cg_core/ort-dynamic"]
ort-cuda = ["cg_core/ort-cuda"]

[dependencies]
cg_core = { path = "../crates/cg-core", default-features = false }
cg_proto = { path = "../crates/cg-proto" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
