[package]
name = "cg_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core indexing, embedding, and search library for CodeGrasp"

[features]
default = ["ort-bundled"]
# Reserved for rust-analyzer / LSP enrichment; chunking currently matches AST-only behavior.
lsp = []
openai = ["dep:async-openai"]
# Prebuilt ONNX Runtime from `ort` (default). Can segfault on some rolling Linux + bundled combos.
ort-bundled = ["fastembed/ort-download-binaries"]
# Link ONNX Runtime from `ORT_DYLIB_PATH` or `libonnxruntime.so` on PATH (matches `ort` load-dynamic).
# Build: `cargo build -p code-grasp --no-default-features --features ort-dynamic` (see install script tip).
ort-dynamic = ["fastembed/ort-load-dynamic"]
# Enable ONNX Runtime CUDA EP (requires CUDA toolkit / driver). Falls back to CPU if unavailable at runtime.
ort-cuda = ["ort/cuda"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
streaming-iterator = "0.1"
rayon = { workspace = true }
thread_local = { workspace = true }
# Cannot inherit `fastembed` from `[workspace.dependencies]` with `default-features = false` (Cargo limitation).
fastembed = { version = "4", default-features = false, features = ["hf-hub-native-tls"] }
ort = { workspace = true }
hf-hub = { workspace = true }
usearch = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
async-openai = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
